Details
-
Bug
-
Resolution: Fixed
-
P4
-
hs13
Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-2177100 | 7 | Vladimir Kozlov | P3 | Closed | Fixed | b27 |
JDK-2174910 | 6u14 | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
Description
One of the issue. I will add others as I find.
% gamma -XX:+UseCompressedOops -XX:+DoEscapeAnalysis Test_SR
VM option '+UseCompressedOops'
VM option '+DoEscapeAnalysis'
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/escape.cpp:117
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/net/jaberwocky.sfbay/export/home2/work2/hg/narwoop/src/share/vm/opto/escape.cpp:117), pid=8504, tid=20
# Error: assert(f->node_type() != PointsToNode::UnknownType && t->node_type() != PointsToNode::UnknownType,"node types must be set")
#
# Java VM: OpenJDK 64-Bit Server VM (12.0-b02-internal-jvmg mixed mode solaris-amd64 compressed oops)
% gamma -XX:+UseCompressedOops -XX:+DoEscapeAnalysis Test_SR
VM option '+UseCompressedOops'
VM option '+DoEscapeAnalysis'
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/escape.cpp:117
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/net/jaberwocky.sfbay/export/home2/work2/hg/narwoop/src/share/vm/opto/escape.cpp:117), pid=8504, tid=20
# Error: assert(f->node_type() != PointsToNode::UnknownType && t->node_type() != PointsToNode::UnknownType,"node types must be set")
#
# Java VM: OpenJDK 64-Bit Server VM (12.0-b02-internal-jvmg mixed mode solaris-amd64 compressed oops)
Attachments
Issue Links
- backported by
-
JDK-2174910 Escape Analysis does not work with Compressed Oops
- Resolved
-
JDK-2177100 Escape Analysis does not work with Compressed Oops
- Closed
- relates to
-
JDK-6710487 More than half of JDI Regression tests hang with COOPs in -Xcomp mode
- Closed