6689060: Escape Analysis does not work with Compressed Oops

64-bits VM crashes with -XX:+AggresiveOpts (Escape Analysis + Compressed Oops)

Reviewed-by: never, sgoldman